[package]
name = "palette_generator"
version = "0.1.0"
authors = ["Jacob VanDomelen <Jacob.Vandome15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.15.0", features = ["tensorflow_gpu"] }
